--- a/_includes/tiles.html
+++ b/_includes/tiles.html
@@ -6,7 +6,7 @@
       <img src="/assets/images/{{ zine.image }}" alt="" />
     </span>
     <header class="major">
-      <h3><a href="{{ zine.url  | relative_url }}" class="link">{{ zine.title }}</a></h3>
+      <h3><a href="{{ zine.store_url }}" class="link" target="_blank">{{ zine.title }}</a></h3>
       <p>{{ zine.description }}</p>
     </header>
   </article>
