--- a/_layouts/allzines.html
+++ b/_layouts/allzines.html
@@ -43,7 +43,7 @@
                 </header>
                 <p>{{zine.description}}</p>
                 <ul class="actions">
-                  <li><a href="{{zine.url}}" class="button">Get this zine!</a></li>
+                  <li><a href="{{zine.store_url}}" class="button">Get this zine!</a></li>
                 </ul>
               </div>
             </div>
